# libr.rs

./: .travis.yml  Cargo.toml  README.md  build.rs  index.html  search-index.js
__i/: config.h  version.h
examples/: 00-mainloop.rs  01-embedded-print.rs  02-embedded-named-call.rs  03-embedded-parse-eval.rs
libr/: index.html  sidebar-items.js
libr/config/: constant.ENABLE_NLS.html  constant.HAVE_ALLOCA_H.html  constant.HAVE_F77_UNDERSCORE.html  constant.HAVE_VISIBILITY_ATTRIBUTE.html  constant.IEEE_754.html  constant.SIZEOF_SIZE_T.html  constant.SUPPORT_MBCS.html  constant.SUPPORT_OPENMP.html  constant.SUPPORT_UTF8.html  index.html  sidebar-items.js
libr/embedded/: fn.CleanEd.html  fn.R_CleanTempDir.html  fn.R_ReplDLLdo1.html  fn.R_ReplDLLinit.html  fn.R_RunExitFinalizers.html  fn.R_SaveGlobalEnv.html  fn.R_setStartTime.html  fn.Rf_KillAllDevices.html  fn.Rf_endEmbeddedR.html  fn.Rf_initEmbeddedR.html  fn.Rf_initialize_R.html  fn.fpu_setup.html  fn.setup_Rmainloop.html  index.html  sidebar-items.js  static.R_DirtyImage.html  static.R_TempDir.html
libr/ext/: index.html  sidebar-items.js
libr/interface/: enum.FILE.html  fn.R_ClearerrConsole.html  fn.R_FlushConsole.html  fn.R_HomeDir.html  fn.R_RestoreGlobalEnv.html  fn.R_RestoreGlobalEnvFromFile.html  fn.R_SaveGlobalEnv.html  fn.R_SaveGlobalEnvToFile.html  fn.R_Suicide.html  fn.R_setStartTime.html  fn.R_setupHistory.html  fn.Rf_jump_to_toplevel.html  fn.Rf_mainloop.html  fn.Rf_onintr.html  fn.fpu_setup.html  fn.jump_to_toplevel.html  fn.mainloop.html  fn.onintr.html  fn.process_site_Renviron.html  fn.process_system_Renviron.html  fn.process_user_Renviron.html  index.html  sidebar-items.js  static.R_CStackLimit.html  static.R_CStackStart.html  static.R_Consolefile.html  static.R_DirtyImage.html  static.R_GUIType.html  (+11 more)
src/: config.rs  embedded.rs  interface.rs  internals.rs  lib.rs  math.rs  r.rs  va_list.rs  version.rs
(+1348 files in other folders)
