[package]
name = "libr"
version = "0.1.0"
authors = ["Huo Linhe <huolinhe@berrygenomics.com>"]
license = "MIT"
readme  = "README.md"
repository = "https://github.com/zisten/libr.rs.git"
description = """
A library for types and bingings to native C functions in libR,
providing most of embedded-R and R math functions.
"""
keywords = ["R", "plot", "math", "graphics"]
build = "build.rs"

[dependencies]
libc = "*"

[build-dependencies]
pkg-config = "*"
bindgen = "*"
walkdir = "2"
